--- a/README.mediawiki
+++ b/README.mediawiki
@@ -18,7 +18,7 @@ This plugin places a QR Code at the bottom of posts, when they are printed, whic
 
 If you are encountering issues, feel free to let me know at the address below.
 
-'''E-mail:''' brycecmpbell@gmail.com
+'''E-mail:''' habari@brycecampbell.me
 
 Please make sure that The name of the plugin in and '''Habari''' are in the subject field, so that I know what you talking about.
 
